# CarrierBridge

./: .gitignore  CMakeLists.txt  COMMIT_HISTORY.md  README.md
.github/workflows/: ci.yml
Android/: settings.gradle.kts
Android/app/: build.gradle.kts
Android/app/src/androidTest/java/com/example/secure_carrier/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/com/example/secure_carrier/: MainActivity.kt
Android/app/src/main/java/com/example/secure_carrier/crypto/: SecureCommNative.kt
Android/app/src/main/java/com/example/secure_carrier/net/: NetworkClient.kt  NetworkClientFixed.kt  ServerDiscovery.kt  WebSocketManager.kt
Android/app/src/main/java/com/example/secure_carrier/ui/auth/: AuthScreen.kt  AuthViewModel.kt
Android/app/src/main/java/com/example/secure_carrier/ui/chat/: ChatScreen.kt
Android/app/src/main/java/com/example/secure_carrier/ui/theme/: Color.kt  Theme.kt  Type.kt
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/main/res/xml/: network_security_config.xml
Android/app/src/test/java/com/example/secure_carrier/: ExampleUnitTest.kt
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
backend/: Cargo.toml
backend/src/: crypto.rs  main.rs  network.rs
backend/tests/: network_test.rs
ci/: pipeline.yml
core/proto/: payment.proto  securecomm.proto  vpn.proto
cpp/: CMakeLists.txt
docs/: DEPLOYMENT.md
go/: go.mod
go/broker/internal/services/: broker.go
go/client_example/: main.go
go/pkg/crypto/: security.go
rust/security-core/: Cargo.toml
server/: go.mod  main.go  package-lock.json  package.json
src/app/: main.cpp
src/carrierbridge/: core.cpp
src/carrierbridge/include/: carrierbridge.h
src/libsecurecomm/include/securecomm/: crypto.hpp  enhanced_dispatcher.hpp  envelope.hpp  key_store.hpp  mls_manager.hpp  ratchet.hpp  x3dh.hpp
src/libsecurecomm/src/: crypto.cpp  dispatcher.cpp  enhanced_dispatcher.cpp  envelope.cpp  in_memory_transport.cpp  ratchet.cpp  websocket_transport.cpp  x3dh.cpp
src/libsecurecomm/src/clients/desktop/: main.cpp
src/libsecurecomm/src/modules/mesh/: mesh_network.cpp  mesh_network.hpp
src/libsecurecomm/src/modules/offline/: queue_manager.cpp  queue_manager.hpp
src/libsecurecomm/tests/: crypto_test.cpp  crypto_unit_test.cpp  ratchet_test.cpp  ratchet_two_party_test.cpp  ratchet_unit_test.cpp  two_party_messaging.cpp  unit_tests.cpp  x3dh_unit_test.cpp
tests/: CMakeLists.txt
ui/web/: package.json
