[package]
name = "securecomm-backend"
version = "0.1.0"
edition = "2021"
description = "SecureComm backend - privacy-first communication platform"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
libp2p = { version = "0.52", features = ["tcp-tokio", "dns", "noise", "yamux", "identify"] }
ring = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tokio-test = "0.4"
